white space fix test 2

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,10 +10,6 @@
 	font-family: "PT Sans", sans-serif;
 }
 
-body {
-	background-color: black;
-}
-
 // Logo
 #logo {
 	width: 230px;
@@ -110,6 +106,7 @@ video {
 }
 
 .header-container {
+	background-color: black;
 	height: 100vh;
 	width: 100%;
 	display: flex;
